# otoroshi

./: .gitignore  .gitpod.yml  .travis.deprecated.yml  .travis.yml  CHANGELOG  CHANGELOG.md  MAINTAINERS.md  MIGRATION_SCALA3_PLAN.md  NOTICE  NOTICE.txt  ROADMAP.md  SCALA3_MIGRATION_HANDOFF.md  SECURITY.md  USERS.md  build.sbt  docker-compose-test.yml  licences.md  mise.toml  package.json  readme.md  roadmap.md
.claude/plans/: PHASE1_API_LIFECYCLE_PLAN.md  entities-remote-repositories.md  gateway-api-implementation-plan-claude.md  gateway-api-implementation-plan.md  glistening-toasting-dragonfly.md  user-analytics-implementation-plan.md
.claude/research/: admin-extensions.md  app-actions.md  app-api.md  app-auth.md  app-cluster.md  app-controllers.md  app-el-env-health.md  app-events.md  app-gateway.md  app-greenscore-jobs-metrics.md  app-models.md  app-netty-openapi-security.md  app-next.md  app-plugins-script-tcp-utils-wasm.md  app-ssl-storage.md  architecture-overview.md  index.md  plugins-reference.md
.claude/specs/: features-updated.md  user-analytics-spec-v2.md
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_dev_manual.yml  build_next_manual.yml  kustomize_validate.yaml  manual.yml  playwright_e2e.yaml  release.yaml  (+2 more)
clients/cli/: Cargo.toml  otoroshicli.toml  readme.md
clients/cli/src/: client.rs  file.rs  http.rs  main.rs  opt.rs  tryout.rs
docker/: Dockerfile  entrypoint.sh
docs/: index.html  old.html
documentation/: build.sbt
experiments/otoroshi-http2-client/: Cargo.toml
experiments/otoroshi-http2-client/src/: main.rs
experiments/otoroshi-remote-tunnel-agent/: Cargo.toml
experiments/otoroshi-remote-tunnel-agent/src/: opts.rs  otoroshi.rs  tunnel.rs
experiments/otoroshi-tls-termination/: .gitignore  Cargo.toml  linux-build.sh  readme.md
experiments/otoroshi-tls-termination/src/: certs.rs  io.rs  macros.rs  main.rs  opts.rs  proxy.rs  tls.rs
kubernetes/: readme.md
manual/: build.sbt  build.sh  config.js  indexer.js
manual.next/: build.sbt  config.js
otoroshi/: .gitignore  .scalafix.conf  .scalafmt.conf  build.sbt  docker-compose.yml  grep  package.json  readme.md
project/: plugins.sbt
scripts/: build.sh  changelog.sh  cli-linux-build.sh  client.js  doc.sh  docker-bench.sh  dockerpush.sh  find.sh  fmt.sh  helm.sh  packages.js  quicktest.sh  release.sh  schemas.sh  session.sh  update-extism.sh  upload.sh  wrk.sh
test-resources/: .gitignore
(+12082 files in other folders)
