[package]
name = "otoroshi-http2-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.76"
base64 = "0.13.0"
clap = { version = "3.0.13", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
moka = { version = "0.7", features = ["future"] }
env_logger = "0.9"
log = "0.4.0"
reqwest = { version = "0.11.9", features = ["json", "native-tls", "rustls-tls"] }